<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>il.ac.bgu.cs</groupId>
	<artifactId>FormalMethodsIntro-Base</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>
	<repositories> <!-- Add the local repo to the classpath -->
		<repository>
			<id>repo</id>
			<url>file:///${project.basedir}/repo</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<version>4.5.1</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.svvrl</groupId>
			<artifactId>cmd</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.svvrl</groupId>
			<artifactId>coreio</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.svvrl</groupId>
			<artifactId>core</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.svvrl</groupId>
			<artifactId>gui</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>org.junit.jupiter</groupId>-->
<!--			<artifactId>junit-jupiter</artifactId>-->
<!--			<version>RELEASE</version>-->
<!--			<scope>compile</scope>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.testng</groupId>-->
<!--			<artifactId>testng</artifactId>-->
<!--			<version>RELEASE</version>-->
<!--			<scope>compile</scope>-->
<!--		</dependency>-->
	</dependencies>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<configuration>
					<configLocation>config/sun_checks.xml</configLocation>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>
